--- a/.github/workflows/preview_s4-dotnetconf.yml
+++ b/.github/workflows/preview_s4-dotnetconf.yml
@@ -51,7 +51,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 's4-dotnetconf/preview'
-          slot-name: 'Preview'
+          app-name: 's4-dotnetconf-preview'
+          slot-name: ''
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_7F5D65648C714169B5D74184AAB1F95D }}
           package: .
